# ai-Support

./: .env.example  .gitignore  README.md  resume.md
backend/: main.py  pyproject.toml
backend/core/: asr.py  chunker.py  config.py  embedder.py  indexer.py  models.py  prompts.py  resume.py  retriever.py
backend/core/llm/: __init__.py  base.py  claude.py  deepseek.py  openai.py
backend/routes/: ask.py  asr.py
backend/tests/eval/: __main__.py  cases.yaml
backend/tests/fixtures/notes_sample/k8s/: controller-runtime.md
backend/tests/fixtures/notes_sample/mysql/: 事务隔离.md
backend/tests/fixtures/notes_sample/项目/: 订单系统复盘.md
backend/tests/integration/: test_ask_flow.py
backend/tests/unit/: test_asr.py  test_chunker.py  test_config.py  test_embedder.py  test_indexer.py  test_llm_providers.py  test_retriever.py
docs/: test-checklist.md
docs/superpowers/plans/: 2026-05-28-interview-rag.md
docs/superpowers/specs/: 2026-05-28-interview-rag-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: PushToTalkButton.tsx  QueryInput.tsx  RetrievalPane.tsx  SummaryPane.tsx  Toast.tsx
frontend/src/hooks/: useAsk.ts  usePushToTalk.ts
notes/: 笔记.md
