[project]
name = "interview-rag-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-dotenv>=1.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "markdown-it-py>=3.0",
  "faiss-cpu>=1.9",
  "rank-bm25>=0.2.2",
  "jieba>=0.42",
  "openai>=1.50",
  "httpx>=0.27",
  "anthropic>=0.40",
  "tiktoken>=0.8",
  "numpy>=1.26",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "routes*"]

[tool.setuptools]
py-modules = ["main"]
